<resources>
    <string name="app_name">CoinMarket</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_crypto_currency_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="radio_USD">USD</string>
    <string name="radio_EUR">EUR</string>
    <string name="radio_CNY">CNY</string>
    <string name="btn_confirm">Save</string>
    <string name="network_connection_failed_dialog_title">Network connection</string>
    <string name="network_connection_failed_dialog_message">Network connection is online. Can\'t get data!</string>
    <string name="prices_currency">Prices are in currency:</string>
    <string name="search">Search</string>
    <string name="select_on_of_the_following_fiat_currencies">select_currencies</string>
    <string name="currency_name">Currency name: </string>
    <string name="currency_rank">Currency rank:</string>
    <string name="currency_symbol">Currency smbol:</string>
    <string name="fiat_currency">Currency Fiat:</string>
    <string name="currency_price_usd">Price USD;</string>
    <string name="market_cap_usd">Market cap USD:</string>
    <string name="price_btc">Price Btc:</string>
    <string name="percentchange1h">percentChange1h</string>
    <string name="percentchange24h">percentChange24h</string>
    <string name="percentchange7d">percentChange7d</string>
    <string name="totalsupply">totalSupply</string>
    <string name="availablesupply">availableSupply</string>
    <string name="name">name</string>
    <string name="rank">rank</string>
    <string name="symbol">symbol</string>
    <string name="fiat_currency_row">Currency Fiat:</string>
    <string name="_24_hour_change">24 hour change</string>
    <string name="rank_list">Rank:</string>
    <string name="symbol_list">Symbol:</string>
    <string name="price_list">Price:</string>
    <string name="_24_hourc_change_list">24 hour change:</string>
    <string name="id">id</string>
    <string name="price">price</string>
    <string name="priceBtc">priceBtc</string>
    <string name="_24hVolume">_24hVolume</string>
    <string name="marketCap">marketCap</string>
    <string name="availableSupply">availableSupply</string>
    <string name="totalSupply">totalSupply</string>
    <string name="percentChange1h">percentChange1h</string>
    <string name="percentChange24h">percentChange24h</string>
    <string name="percentChange7d">percentChange7d</string>
    <string name="activity_detail_title">Cryptocurrency detail</string>
    <string name="crypto_currency_prices">Cryptocurrency prices are in :</string>
    <string name="currency_selected">currencySelected</string>
    <string name="choosen_fiat_currency_message">You have choosen the fiat currency:</string>
</resources>
