<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingBottom="5dp">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="15dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:layout_alignParentTop="true"
                android:text="@string/name"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/rank"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/name"
                android:text="@string/rank"/>

            <TextView
                android:id="@+id/symbol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rank"
                android:text="@string/symbol"/>

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/symbol"
                android:text="@string/fiat_currency_row"/>

            <TextView
                android:id="@+id/percentChange24h"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/price"
                android:text="@string/_24_hour_change"/>

        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>