<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select on of the following fiat currencies:"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp"
        android:textSize="@dimen/hint_settings"/>

    <RadioGroup
        android:id="@+id/radioCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:paddingLeft="5dp">

        <RadioButton
            android:id="@+id/radioUSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_USD"
            android:checked="true" />

        <RadioButton
            android:id="@+id/radioEUR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_EUR" />

        <RadioButton
            android:id="@+id/radioCNY"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_CNY" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConfirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_confirm"
        android:layout_gravity="center"
       />

</LinearLayout>